--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,11 +21,50 @@ const { title } = Astro.props;
   </body>
 </html>
 
-<style>
+<style is:global>
+  html {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      "Courier New",
+      Courier,
+      monospace;
+    background: #fff;
+    letter-spacing: -0.025em;
+  }
   html,
   body {
     margin: 0;
     width: 100%;
     height: 100%;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .non-print {
+    display: none;
+  }
+
+  @media print {
+    .no-print {
+      display: none;
+    }
+  }
+
+  .print {
+    display: none;
+  }
+
+  @media print {
+    .print {
+      display: block;
+    }
   }
 </style>
