--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -1,5 +1,37 @@
 ---
 import Sections from "../Sections.astro";
+import { education } from "@cv";
 ---
 
-<Sections title="Education" />
+<Sections title="Educación">
+  <ul class="flex flex-col gap-8">
+    {
+      education.map(
+        ({ institution, startDate, endDate, studyType, courses, score }) => {
+          const startYear = new Date(startDate).getFullYear();
+          const endYear =
+            endDate != null ? new Date(endDate).getFullYear() : "Actual";
+
+          const years = `${startYear} - ${endYear}`;
+
+          return (
+            <li>
+              <article>
+                <header class="flex justify-between items-start mb-1">
+                  <div>
+                    <h3 class="font-medium text-[#111]">{institution}</h3>
+                    <h4 class="font-normal text-[#222]">{studyType}</h4>
+                  </div>
+                  <time class="text-sm text-[#555]">{years}</time>
+                </header>
+                <footer>
+                  <p class="text-base text-text">{courses}</p>
+                </footer>
+              </article>
+            </li>
+          );
+        }
+      )
+    }
+  </ul>
+</Sections>
